--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
 body
 
 {
-    color: aqua;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    color: yellowgreen;
+    text-align: left;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
+}
+#container 
+
+{
+    width: 70%;
+    padding:1em;
+    text-align: left;
+    border: 1px solid #aaa;
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
     
 }
+
