--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,20 @@ body
 
 
 }
+#cabecera 
+{
+    background: aquamarine;
+    box-shadow: 0px 5px 10px 0px rebeccapurple;
+
+    color: brown;
+    margin: 0;
+    padding: 0.5em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+
+
+}
+
 #container 
 
 {
@@ -19,6 +33,6 @@ body
 #container h1
 {
     font-size: 20px;
-    
+
 }
 
